--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
   "name": "@smarthtmlelements/smart-elements",
-  "version": "2.0.0",
-  "description": "Smart Elements",
-   "scripts": { 
+  "version": "1.0.0",
+  "description": "Web Components &amp; Custom Elements for Professional Web Applications",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HTMLElements/smart-elements.git"
   },
-  "author": "Smart HTML Elements",
-  "license": "SEE LICENSE IN https://www.htmlelements.com/license/",
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HTMLElements/smart-elements"
+    "url": "https://github.com/HTMLElements/smart-elements/issues"
   },
-  "homepage": "https://github.com/HTMLElements/smart-elements#readme",
-  "devDependencies": {
- 
-  },
-  "dependencies": {
-  },
-  "main": "index.js",
-  "directories": {},
-  "keywords": [
-	"custom",
-	"element",
-	"web components",
-	"webcomponents",
-	"customelements",
-	"custom elements",
-	"html elements",
-	"javascript es6"
-	"javascript"	
-  ]
+  "homepage": "https://github.com/HTMLElements/smart-elements#readme"
 }
