--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smarthtmlelements/smart-elements",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Web Components &amp; Custom Elements for Professional Web Applications",
   "main": "index.js",
   "scripts": {
@@ -10,38 +10,41 @@
     "type": "git",
     "url": "git+https://github.com/HTMLElements/smart-elements.git"
   },
-  "author": "",
-  "license": "https://htmlelements.com/license/",
+  "author": "https://htmlelements.com",
   "bugs": {
     "url": "https://github.com/HTMLElements/smart-elements/issues"
   },
   "homepage": "https://github.com/HTMLElements/smart-elements#readme",
-   "keywords": [
-	"custom",
-	"element",
-	"bootstrap",
-	"tables",
-	"table",
-	"javascript grid",
-	"javascript datagrid",
-	"javascript datatable",
-	"datatable",
-	"bootstrap datagrid",
-	"material datagrid",
-	"bootstrap datatable",
-	"bootstrap table",
-	"grid",
-	"grid web component",
-	"datagrid web component",
-	"data grid",
-	"datagrid bootstrap",
-	"bootstrap grid",
-	"carousel custom element",
-	"html carousel",
-	"material web components",
-	"webcomponents",
-	"material webcomponents",
-	"custom elements",
-	"material customelements"
-  ]
+  "keywords": [
+    "custom",
+    "element",
+    "bootstrap",
+    "chart",
+    "chart web component",
+    "chart custom element",
+    "tables",
+    "table",
+    "javascript grid",
+    "javascript datagrid",
+    "javascript datatable",
+    "datatable",
+    "bootstrap datagrid",
+    "material datagrid",
+    "bootstrap datatable",
+    "bootstrap table",
+    "grid",
+    "grid web component",
+    "datagrid web component",
+    "data grid",
+    "datagrid bootstrap",
+    "bootstrap grid",
+    "carousel custom element",
+    "html carousel",
+    "material web components",
+    "webcomponents",
+    "material webcomponents",
+    "custom elements",
+    "material customelements"
+  ],
+  "license": "ISC"
 }
